# video-summary

./: .dockerignore  .gitignore  README.md  docker-compose.yml  meeting_pipeline.py  pyproject.toml  requirements.txt
docker/api/: Dockerfile
docker/frontend/: Dockerfile
frontend/: artifacts.html  help.html  index.html  status.html
frontend/assets/: app.css  app.js
tests/: README.md  test_cli.py  test_filesystem_adapters.py  test_models.py  test_orchestrator.py  test_slide_mapping.py  test_summarizer.py  test_transcript_services.py  test_webapp.py
video_summary/: README.md  __init__.py  __main__.py  cli.py  config.py  main.py  orchestrator.py
video_summary/adapters/: README.md  __init__.py
video_summary/adapters/alignment/: __init__.py  default.py
video_summary/adapters/asr/: __init__.py  faster_whisper.py
video_summary/adapters/diarization/: __init__.py  pyannote.py
video_summary/adapters/media/: __init__.py  ffmpeg.py
video_summary/adapters/presentation/: __init__.py  pptx.py
video_summary/domain/: README.md  __init__.py  models.py
video_summary/interfaces/: README.md  __init__.py  alignment.py  asr.py  diarization.py  media.py  presentation.py  readers.py  rendering.py  scenes.py  slide_binding.py  state_store.py  subtitles.py  summarization.py  writers.py
video_summary/pipeline/: README.md  __init__.py  context.py
video_summary/services/: README.md  __init__.py  slide_mapping.py  transcript.py
video_summary/webapp/: __init__.py  app.py  database.py  models.py  repository.py  service.py  settings.py
(+30 files in other folders)
